--- a/ru.html
+++ b/ru.html
@@ -32,8 +32,8 @@
                             <img src="images/bcfda2a6.avatarS.png" title="avatar" alt="avatar">
                         </div>
                         <div class="text-header">
-                            <h1>Hello,<br>
-                                My name is <span>Andrew</span><sup></sup>, and this is a draft of my resume/CV.</h1>
+                            <h1>Привет,<br>
+                                Меня зовут <span>Андрей</span><sup></sup>, и это черновик моего резюме.</h1>
                         </div>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
             <div class="row">
                 <div class="box col-xs-12">
                     <!--Double Skils-->
-                    <h2>Skills</h2>
+                    <h2>Навыки</h2>
                     <ul class="ckuJl">
                         <li class="col-xs-6 col-sm-6 col-md-3">
                             <h3>HTML</h3>
@@ -82,7 +82,7 @@
                 <div class="col-xs-12 col-sm-7">
                     <!--About Me-->
                     <div class="box">
-                        <h2>About me</h2>
+                        <h2>Обо мне</h2>
                         <p>High susceptibility to information, self-learning, 
                             the ability to articulate ideas;
                             Resistance to stress, high performance in any situation;
@@ -93,7 +93,7 @@
 
                     <!-- Education -->
                     <div class="box">
-                        <h2>Education</h2>
+                        <h2>Образование</h2>
                         <ul class="timeline clearfix">
                             <li>
                                 <div class="year pull-left">1989</div>
@@ -156,7 +156,7 @@
 
                     <!-- Experiences -->
                     <div class="box">
-                        <h2>Experiences</h2>
+                        <h2>Опыт</h2>
                         <div class="job clearfix">
                             <div class="col-xs-3">
                                 <div class="where">Private Company</div>
@@ -191,7 +191,7 @@
 
                     <!-- Contact -->
                     <div class="box clearfix">
-                        <h2>Contact</h2>                        
+                        <h2>Контакты</h2>                        
                         <div class="contact-item pull-left">
                             <div class="icon pull-left text-center">
                                 <i class="fa fa-phone fa-fw"></i>
@@ -222,7 +222,7 @@
 
                     <!-- Skills -->
                     <div class="box clearfix">
-                        <h2>Skills</h2>
+                        <h2>Навыки</h2>
                         <div class="skills">
                             <div class="skill-item" data-percent="0.74">HTML</div>
                             <div class="skill-item" data-percent="0.74">CSS</div>
@@ -232,16 +232,16 @@
 
                             <div class="skill-scale">
                                 <div class="scale scale-left">
-                                    Beginner
+                                    Младший джедай
                                 </div>
                                 <div class="scale scale-left">
-                                    <span>Proficient</span>
+                                    <span>Джедай-падаван</span>
                                 </div>
                                 <div class="scale scale-right">
-                                    <span>Expert</span>
+                                    <span>Рыцарь-джедай</span>
                                 </div>
                                 <div class="scale scale-right">
-                                    Master
+                                    Мастер-джедай
                                 </div>
                             </div>
                         </div>
@@ -249,10 +249,10 @@
 
                     <!-- Languages -->
                     <div class="box">
-                        <h2>Languages</h2>
+                        <h2>Языки</h2>
                         <div class="language-skill">
                             <div class="language-item">
-                                English
+                                Английский
                                 <div class="icon-group pull-right">
                                     <i class="fa fa-star red"></i>
                                     <i class="fa fa-star red"></i>
@@ -262,7 +262,7 @@
                                 </div>
                             </div>
                             <div class="language-item">
-                                Hebrew
+                                Иврит
                                 <div class="icon-group pull-right">
                                     <i class="fa fa-star red"></i>
                                     <i class="fa fa-star red"></i>
@@ -272,7 +272,7 @@
                                 </div>
                             </div>
                             <div class="language-item">
-                                Ukrainian
+                                Украинский
                                 <div class="icon-group pull-right">
                                     <i class="fa fa-star red"></i>
                                     <i class="fa fa-star red"></i>
@@ -282,7 +282,7 @@
                                 </div>
                             </div>
                             <div class="language-item">
-                                Russian
+                                Русский
                                 <div class="icon-group pull-right">
                                     <i class="fa fa-star red"></i>
                                     <i class="fa fa-star red"></i>
@@ -296,18 +296,18 @@
 
                     <!-- Hobbies -->
                     <div class="box">
-                        <h2>Hobbies</h2>
+                        <h2>Хобби</h2>
                         <div class="label bg-color-dirtyPink">
                             <i class="fa fa-code"></i>
-                            Programming
+                            Программирование
                         </div>
                         <div class="label bg-color-dirtyPink">
                             <i class="fa fa-heartbeat"></i>
-                            Bodybuilding
+                            Бодибилдинг
                         </div>
                         <div class="label bg-color-dirtyPink">
                             <i class="fa fa-music"></i>
-                            Guitar
+                            Гитара
                         </div>
                     </div>
                 </div>
