Temporary Russian version

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <div>
-                        <a href="/ru">Ru</a>
-                        <a href="/">En</a>
-                        <a href="/he">He</a>
+                    <div class="lang-switcher">
+                        <a href="/ru" title="Russian">Ru</a>
+                        <a href="/" class="active" title="English">En</a>
+                        <a href="/he" title="Hebrew">He</a>
                     </div>
                     <div class="photo-header text-center">
                         <div class="photo">
@@ -229,7 +229,7 @@
                             <div class="skill-item" data-percent="0.6">JavaScript</div>
                             <div class="skill-item" data-percent="0.5">PHP</div>
                             <div class="skill-item" data-percent="0.25">MySQL</div>
-
+                            
                             <div class="skill-scale">
                                 <div class="scale scale-left">
                                     Beginner
