--- a/ru.html
+++ b/ru.html
@@ -10,8 +10,8 @@
         <link rel="apple-touch-icon" href="/apple-touch-icon.png">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="/styles/ddbb6e8d.vendor.css">
-        <link rel="stylesheet" href="/styles/0dcf29ce.main.css">
+        <link rel="stylesheet" href="/styles/vendor.css">
+        <link rel="stylesheet" href="/styles/main.css">
     </head>
     <body>
         <!--[if lt IE 10]>
@@ -88,7 +88,7 @@
                             Высокая восприимчивость к информации, самообучаемость,
                             умение доступно сформулировать свои мысли, стрессоустойчивость,
                             высокая производительность в любой ситуации, организованность,
-                            ответственнрсть, коммуникабельность.
+                            ответственность, коммуникабельность, умение работать в команде.
                         </p>
                     </div>
 
@@ -147,7 +147,7 @@
                                         Применение полученых знаний для разработки
                                         алгоритмов по сбору и анализу данных с метеостанций.<br>
 
-                                        Высший бал в защите деплома.
+                                        Высший бал в защите диплома.
                                     </p>
                                 </div>
                             </li>
@@ -425,7 +425,7 @@
             </div>			
         </div>
 
-        <script src="scripts/1a51cf04.vendor.js"></script>
-        <script src="scripts/e2acafb7.main.js"></script>
+        <script src="scripts/vendor.js"></script>
+        <script src="scripts/main.js"></script>
     </body>
 </html>
