--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <link rel="apple-touch-icon" href="/apple-touch-icon.png">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="styles/ddbb6e8d.vendor.css">
-        <link rel="stylesheet" href="styles/0dcf29ce.main.css">
+        <link rel="stylesheet" href="styles/vendor.css">
+        <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
         <!--[if lt IE 10]>
@@ -47,31 +47,32 @@
                             <h3>HTML</h3>
                             <i class="html"></i>
                             <p>
-                                HTML, CSS, SASS/SCSS.
+                                HTML, CSS, SASS/SCSS/Compass.
                             </p>
                         </li>                        
                         <li class="col-xs-6 col-sm-6 col-md-3">
                             <h3>JavaScript</h3>
                             <i class="javaScript"></i>
                             <p>
-                                Native JavaScript, 
-                                jQuery, OOP, MVC/MV*,
-                                JSHint, AJAX, JSON, REST, APIs.
+                                Vanilla JS, AngularJS 1.x,
+                                jQuery, NodeJS, PhantomJS, Google API,
+                                JSHint, AJAX, JSON, REST, APIs, Mustache Template,.
                             </p>
                         </li>                        
                         <li class="col-xs-6 col-sm-6 col-md-3">
                             <h3>PHP/MySQL</h3>
                             <i class="php"></i>
                             <p>
-                                PHP, YII Framework, Twig templating, OOP, 
-                                MVC, Wordpress.
+                                PHP, YII Framework 1.x, Twig Template, 
+                                Laravel 5, Blade Template, Slim 3, Mustache Template,
+                                OOP, MVC, Wordpress, MySQL, Redis.
                             </p>
                         </li>                        
                         <li class="col-xs-6 col-sm-6 col-md-3">
                             <h3>Other</h3>
                             <i class="misc"></i>
                             <p>
-                                Git, Grunt, Composer, Scrum/Agile Methodology, Photoshop.
+                                Git, npm, bower, Grunt, Gulp, Composer, Scrum/Agile Methodology, Photoshop.
                             </p>
                         </li>                        
                     </ul>
@@ -314,7 +315,7 @@
             </div>			
         </div>
 
-        <script src="scripts/1a51cf04.vendor.js"></script>
-        <script src="scripts/e2acafb7.main.js"></script>
+        <script src="scripts/vendor.js"></script>
+        <script src="scripts/main.js"></script>
     </body>
 </html>
